--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Healthy Living</title>
+    <title>HealthGevity</title>
     <link rel="stylesheet" href="health.css">
 </head>
 <body>
     <header>
-        <h1>Healthy Living</h1>
+        <h1>HealthGevity</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -20,6 +19,7 @@
         </nav>
     </header>
 
+    <main>
     <div id="heart">
         <img src="images/heart.gif">
     </div>
@@ -44,9 +44,54 @@
         <p>Learn more about our mission and team dedicated to promoting a healthier lifestyle for everyone.</p>
     </section>
 
-    <section id="contact" class="section">
+    </main>
+    <section class="section">
+        
+        <div id="contact">
         <h2>Contact Us</h2>
         <p>Have questions or feedback? Contact us to get in touch with our team.</p>
+        </div>
+        <br>
+
+        <form>
+        <label for="name">Name: </label>
+        <input type="text" name="name" id="name" placeholder="Write your name" required="True"><br><br>
+
+        <label for="email">Email: </label>
+        <input type="email" name="email" id="email" placeholder="Write your email" required="True"><br><br>
+
+        <label for="experience">Experience: </label>
+        <textarea name="experience" id="experience" placeholder="Please share with us your experience." rows="5"
+            cols="50" required="True"></textarea><br><br>
+
+        <label for="visit">Date of visit: </label>
+        <input type="date" name="visit" id="visit"><br><br>
+
+        <p>How would you describe yourself?</p>
+        <label for="adventurer">Adventurer</label>
+        <input type="radio" name="travelerType" id="adventurer">
+        <label for="explorer">Explorer</label>
+        <input type="radio" name="travelerType" id="explorer"><br><br>
+
+        <label for="blog">Personal blog:</label>
+        <input type="url" name="blog" id="blog" placeholder="Write the address of your blog"><br><br>
+
+        <label for="visitors">Number of visitors:</label>
+        <input type="number" name="visitors" id="visitors"><br><br>
+
+        <label for="continent">Choose your region of origin:</label>
+        <select name="continent" id="continent">
+            <option value="north_america">North America</option>
+            <option value="south_america">South America</option>
+            <option value="europe">Europe</option>
+            <option value="africa">Africa</option>
+            <option value="asia">Asia</option>
+            <option value="australia">Australia</option>
+        </select><br><br>
+
+        <input type="submit" value="Submit"><br><br>
+    </form>
+
     </section>
 
     <footer>
